--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,33 @@
-events { }
+events {
+    worker_connections 1024;  # Adjust this number based on your needs
+}
 
 http {
+    # Define the path for the error log file
+    error_log /var/log/nginx/error.log warn;  # You can use 'info', 'notice', 'warn', or 'error' for the log level
+
     server {
-        listen 80;
-        server_name localhost;
+        listen 90;
+        server_name 16.171.171.146;
+
+        # Specify custom error pages
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
 
         location / {
             root /usr/share/nginx/html;
             index index.html;
+        }
+
+        # Location block for custom error pages
+        location = /404.html {
+            root /usr/share/nginx/html;  # Adjust path as necessary
+            internal;
+        }
+
+        location = /50x.html {
+            root /usr/share/nginx/html;  # Adjust path as necessary
+            internal;
         }
     }
 }
